--- a/projeto_lab/src/App.scss
+++ b/projeto_lab/src/App.scss
@@ -1,29 +1,135 @@
-body {
-  background-color: #232322;
-  font-size: 16px;
-  color: white;
+$text-font: "Roboto", sans-serif;
+$title-font: "Rubick", sans-serif;
+$background-color: #3c3c3b;
+$white: #ebebd3;
+$yellow: #ffe066;
+$red: #f24643;
+$blue: #1376a0;
 
-  a {
-    text-decoration: none;
+body {
+  background-color: $background-color;
+  font-size: 16px;
+  font-family: $text-font;
+  color: $white;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  a.basicLink {
+    border-bottom: $red solid 2px;
+    color: $white;
+
+    &:hover,
+    &:active {
+      border-bottom: $red solid 2px;
+      color: $blue;
+    }
+  }
+
+  h1 {
+    color: $yellow;
+    font-weight: bold;
+    font-family: $title-font;
+    padding-bottom: 2rem;
+  }
+
+  h3 {
+    color: $blue;
+    font-weight: bold;
+    font-family: $title-font;
+  }
+}
+
+div.typeIcon {
+  display: inline-block;
+  width: 66px;
+  font-size: .75rem;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  line-height: 1.5rem;
+  text-align: center;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+  text-transform: uppercase;
+  transition: opacity 0.4s;
+
+  &:hover {
+    opacity: 0.85;
+  }
+
+  &.type-electric {
+    background-color: #fc3;
+  }
+  &.type-water {
+    background-color: #39f;
+  }
+  &.type-grass {
+    background-color: #7c5;
+  }
+  &.type-dragon {
+    background-color: #76e;
+  }
+  &.type-rock {
+    background-color: #ba6;
+  }
+  &.type-ground {
+    background-color: #db5;
+  }
+  &.type-flying {
+    background-color: #89f;
+  }
+  &.type-poison {
+    background-color: #a59;
+  }
+  &.type-dark {
+    background-color: #754;
+  }
+  &.type-steel {
+    background-color: #aab;
+  }
+  &.type-fire {
+    background-color: #f42;
+  }
+  &.type-normal {
+    background-color: #aa9;
+  }
+  &.type-fighting {
+    background-color: #b54;
+  }
+  &.type-ghost {
+    background-color: #66b;
+  }
+  &.type-ice {
+    background-color: #6cf;
+  }
+  &.type-psychic {
+    background-color: #f59;
+  }
+  &.type-bug {
+    background-color: #ab2;
   }
 }
 
 nav {
-  background-color: #50514f;
+  background-color: transparent;
 
   ul li {
+    .navbar__link-active {
+      color: $yellow;
+      background-color: $red;
+      font-weight: bold;
+    }
+
     .navbar__link {
       position: relative;
       z-index: 1;
     }
 
-    
-
     a {
+      border-bottom: none;
+      text-decoration: none;
       transition: all 0.5s;
       padding: 15px;
       position: relative;
-      color: yellowgreen;
+      color: $red;
       margin: 0 0.625rem 0 0.625rem;
 
       &:after,
@@ -32,7 +138,8 @@ nav {
       }
 
       &:hover {
-        color: #91640f;
+        text-decoration: none;
+        color: $blue;
       }
 
       &:after {
@@ -47,7 +154,7 @@ nav {
         height: 1px;
         content: ".";
         color: transparent;
-        background: #f1c40f;
+        background: $yellow;
         visibility: none;
         opacity: 0;
         z-index: -1;
