--- a/projeto_lab/src/App.scss
+++ b/projeto_lab/src/App.scss
@@ -15,13 +15,22 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   a.basicLink {
-    border-bottom: $red solid 2px;
+    border-bottom: $red solid 2px !important;
     color: $white;
+    transition: all 0.5s;
 
     &:hover,
     &:active {
-      border-bottom: $red solid 2px;
-      color: $blue;
+      text-decoration: none;
+      border-bottom: $blue solid 2px !important;
+      color: $red;
+    }
+  }
+
+  p {
+    &::selection {
+      background: $yellow;
+      color: $red;
     }
   }
 
@@ -29,20 +38,69 @@ body {
     color: $yellow;
     font-weight: bold;
     font-family: $title-font;
-    padding-bottom: 2rem;
+    padding-bottom: 1.5rem;
   }
 
   h3 {
     color: $blue;
     font-weight: bold;
     font-family: $title-font;
+    padding-bottom: 1rem;
+  }
+
+  h4 {
+    color: $blue;
+    font-family: $title-font;
+    padding-bottom: 1rem;
+  }
+}
+
+.form-group {
+  input {
+    background-color: $blue;
+    border: 1px solid $yellow;
+    color: $white;
+    transition: all 0.4s ease-in-out;
+
+    &:focus {
+      background-color: $red;
+      font-weight: bold;
+      color: $yellow;
+      border: 1px solid $yellow;
+
+      &::placeholder {
+        color: $yellow;
+        opacity: 1;
+      }
+
+      &:-ms-input-placeholder {
+        color: $yellow;
+      }
+
+      &::-ms-input-placeholder {
+        color: $yellow;
+      }
+    }
+
+    &::placeholder {
+      color: $white;
+      opacity: 1;
+    }
+
+    &:-ms-input-placeholder {
+      color: $white;
+    }
+
+    &::-ms-input-placeholder {
+      color: $white;
+    }
   }
 }
 
 div.typeIcon {
   display: inline-block;
-  width: 66px;
-  font-size: .75rem;
+  width: 80px;
+  font-size: 0.75rem;
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   line-height: 1.5rem;
@@ -124,7 +182,6 @@ nav {
     }
 
     a {
-      border-bottom: none;
       text-decoration: none;
       transition: all 0.5s;
       padding: 15px;
