--- a/projeto_lab/src/App.scss
+++ b/projeto_lab/src/App.scss
@@ -56,6 +56,11 @@ body {
   }
 
   h5{
+    color: $red;
+    font-family: $title-font;
+  }
+
+  h6{
     color: $blue;
     font-family: $title-font;
   }
